--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 .btn.btn-primary.btn-lg {
     background-color: lightgray;
-    border-color:white
+    border-color:white;
+    margin: 5px;
 
 }
